--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ section {
 	width: 100%;
 	height: 100%;
 	background: radial-gradient(83.15% 154.4% at 10% 13.52%, #1E212C 0%, #232441 56.38%, #1E212C 100%);
-	z-index: 1;
+	z-index: 10;
 }
 
 .header_body {
@@ -191,7 +191,7 @@ section {
 
 .header_menu {
 	margin-left: -250px;
-	z-index: 1520;
+	z-index: 20;
 }
 
 .header_burger {
